src/parser/tests/parse_errors/snapshots/rusty__parser__tests__parse_errors__parse_error_containers_tests__function_return_type_with_initializer.snap
---
source: src/parser/tests/parse_errors/parse_error_containers_tests.rs
expression: diagnostics
---
error: Return types cannot have a default value
  ┌─ <internal>:2:35
  │
2 │             FUNCTION foo : INT := 3
  │                                   ^ Return types cannot have a default value


